un po di code smell